--- a/fr v2/css/accueil_bis.css
+++ b/fr v2/css/accueil_bis.css
@@ -18,7 +18,7 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 20%;
+width: 17rem;
 height: 2rem;
 float: left;
 }
@@ -27,7 +27,8 @@ float: left;
 header div {
 float : right;
 width: 30%;
-height:4rem;
+height: 4rem;
+margin-top: -2.8%;
 }
 
 header > a img {
@@ -41,11 +42,10 @@ header blockquote h1:first-letter {
 
 header blockquote{    
     text-align: justify;
-	font-style: italic;
 	font-weight: normal;
-	font-size: 9px;
-	padding-top: 5%;
-	padding-right:5%;
+	font-size: 0.5rem;
+	padding-top: 3%;
+	padding-right: 3%;
 	color: #F2A101;
 }
 
@@ -53,12 +53,12 @@ header div[name]  h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 1rem;
+font-size: 0.8rem;
 color: #304D90;
 }
 
 header div[name]{
-width:90%;
+width:91%;
 top: 5%;
 float: left;
 }
@@ -66,9 +66,10 @@ float: left;
 /** Language **/
 header div aside {
 width: 9%;
+height: 100%;
 float: right;
-clear:both;
-margin-top:-12%;
+/**clear:both;**/
+margin-top:-2%;
 }
 
 /** FOOTER **/
@@ -146,7 +147,7 @@ padding: 0% 0% 10% 20%;
 
 /** NAV MENU **/
 nav {
-	width: 48%;
+	width: 46%;
 	height: 2.8rem;
 	font-family: 'BebasNeue';
 	text-transform: uppercase;
@@ -172,19 +173,16 @@ position:relative;
 width: 18%; 
 height: 2.8rem;
 border-radius: 9px 9px 9px 9px;
+background: none repeat scroll 0% 0%;
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
-	padding-top: 8%;
-    vertical-align: middle;
+	padding-top: 9%;
 	width: 14%;
+	font-size: 1.1rem;
 	font-weight: bold;
-}
-
-nav li {
-	background: none repeat scroll 0% 0%
 }
 
 nav  li:nth-child(1) {
@@ -215,7 +213,7 @@ display:inherit;
    -moz-border-radius:0;
         border-radius:0;
 width: 100%;
-height: 2rem;
+height: 2.5rem;
 }
 
 ul[name="menu"] ul li:hover{
@@ -300,8 +298,6 @@ ul[name="menu"] li li:hover{
 background:#B6E4F2;
 }
 
-
-
 /** CONTENT HOME **/
 body {
 	background : url("../images/body.png") repeat scroll 0% 0% transparent;
@@ -310,16 +306,16 @@ body {
 
 .content {
 	width: 100%;
-	height: 48rem;
+	height: 100%;
 	margin: auto;
 }
 
 .content img {
-display: inline;
 width: 20%;
-float : left;
+display: block;
 padding-left : 41%;
 margin-bottom: 2%;
+margin-top: 3%;
 }
 
 article {
@@ -330,7 +326,8 @@ width: 90%;
 
 article h1 {
 	font-family: 'Helvetica Neue';
-	float : right;
+	margin: auto;
+	display: block;
 	font-size: 2rem;
 	color: #284298;
 	width: 90%;
@@ -364,4 +361,5 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
+	font-size:100%;
 }
