--- a/fr v2/css/competences.css
+++ b/fr v2/css/competences.css
@@ -18,7 +18,7 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 20%;
+width: 17rem;
 height: 2rem;
 float: left;
 }
@@ -27,7 +27,8 @@ float: left;
 header div {
 float : right;
 width: 30%;
-height:4rem;
+height: 4rem;
+margin-top: -2.8%;
 }
 
 header > a img {
@@ -41,11 +42,10 @@ header blockquote h1:first-letter {
 
 header blockquote{    
     text-align: justify;
-	font-style: italic;
 	font-weight: normal;
-	font-size: 9px;
-	padding-top: 5%;
-	padding-right:5%;
+	font-size: 0.5rem;
+	padding-top: 3%;
+	padding-right: 3%;
 	color: #F2A101;
 }
 
@@ -53,12 +53,12 @@ header div[name]  h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 1rem;
+font-size: 0.8rem;
 color: #304D90;
 }
 
 header div[name]{
-width:90%;
+width:91%;
 top: 5%;
 float: left;
 }
@@ -66,9 +66,10 @@ float: left;
 /** Language **/
 header div aside {
 width: 9%;
+height: 100%;
 float: right;
-clear:both;
-margin-top:-12%;
+/**clear:both;**/
+margin-top:-2%;
 }
 
 /** FOOTER **/
@@ -146,7 +147,7 @@ padding: 0% 0% 10% 20%;
 
 /** NAV MENU **/
 nav {
-	width: 48%;
+	width: 46%;
 	height: 2.8rem;
 	font-family: 'BebasNeue';
 	text-transform: uppercase;
@@ -172,19 +173,16 @@ position:relative;
 width: 18%; 
 height: 2.8rem;
 border-radius: 9px 9px 9px 9px;
+background: none repeat scroll 0% 0%;
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
-	padding-top: 8%;
-    vertical-align: middle;
+	padding-top: 9%;
 	width: 14%;
+	font-size: 1.1rem;
 	font-weight: bold;
-}
-
-nav li {
-	background: none repeat scroll 0% 0%
 }
 
 nav  li:nth-child(1) {
@@ -215,7 +213,7 @@ display:inherit;
    -moz-border-radius:0;
         border-radius:0;
 width: 100%;
-height: 2rem;
+height: 2.5rem;
 }
 
 ul[name="menu"] ul li:hover{
@@ -256,9 +254,6 @@ padding-top: 7%;
 transition: .7s all .2s;
 }
 
-ul[name="menu"] li:nth-child(2) > a, nav li:nth-child(2) ul li:nth-child(2) a {
-	text-decoration: underline;
-}
 /** Comportement au survol des sous-menus **/
 ul[name="menu"] li:hover ul{
 max-height:15em;
@@ -310,37 +305,46 @@ body {
 	margin: 0 auto;	
 }
 
-.content {
+/** SECTION PRESENTATION SKILLS **/
+
+section[name="skills"]{
 margin-right: auto;
 margin-left: auto;
 width: 90%;
+margin-bottom: 4%;
 }
 
-
-/** SECTION PRESENTATION SKILLS **/
-
-.content h1 {
+section[name="skills"] h1 {
 	font-family: 'Helvetica Neue';
-	float : right;
 	width: 90%;
-	font-size: 210%;
+	font-size: 2.2rem;
 	padding-right: 5%;
 	padding-top: 4%;
 	text-align : center;
 	margin: auto;
-	display: inline;
+	display: block;
 	color: #F2A101;
 	font-weight: bold;
 }
 
-.content section {
-margin-bottom: 4%;
+canvas[name] {
+margin: auto;
+display: block;
+padding-right: 0;
+padding-left: 0;
 }
 
-.content section  canvas {
+canvas[name="tSkills"] {
 padding-top: 4%;
-width: 49%;
+padding-bottom: 3%;
 }
+
+canvas[name="fSkills"] {
+padding-top: 2%;
+padding-bottom: 3%;
+}
+
+
 
 /** DIVERS **/ 
 
@@ -351,4 +355,5 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
+	font-size: 100%;
 }
