--- a/fr v2/css/happiwork.css
+++ b/fr v2/css/happiwork.css
@@ -18,7 +18,7 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 20%;
+width: 17rem;
 height: 2rem;
 float: left;
 }
@@ -27,7 +27,8 @@ float: left;
 header div {
 float : right;
 width: 30%;
-height:4rem;
+height: 4rem;
+margin-top: -2.8%;
 }
 
 header > a img {
@@ -41,11 +42,10 @@ header blockquote h1:first-letter {
 
 header blockquote{    
     text-align: justify;
-	font-style: italic;
 	font-weight: normal;
-	font-size: 9px;
-	padding-top: 5%;
-	padding-right:5%;
+	font-size: 0.5rem;
+	padding-top: 3%;
+	padding-right: 3%;
 	color: #F2A101;
 }
 
@@ -53,12 +53,12 @@ header div[name]  h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 1rem;
+font-size: 0.8rem;
 color: #304D90;
 }
 
 header div[name]{
-width:90%;
+width:91%;
 top: 5%;
 float: left;
 }
@@ -66,9 +66,10 @@ float: left;
 /** Language **/
 header div aside {
 width: 9%;
+height: 100%;
 float: right;
-clear:both;
-margin-top:-12%;
+/**clear:both;**/
+margin-top:-2%;
 }
 
 /** FOOTER **/
@@ -146,7 +147,7 @@ padding: 0% 0% 10% 20%;
 
 /** NAV MENU **/
 nav {
-	width: 48%;
+	width: 46%;
 	height: 2.8rem;
 	font-family: 'BebasNeue';
 	text-transform: uppercase;
@@ -172,19 +173,16 @@ position:relative;
 width: 18%; 
 height: 2.8rem;
 border-radius: 9px 9px 9px 9px;
+background: none repeat scroll 0% 0%;
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
-	padding-top: 8%;
-    vertical-align: middle;
+	padding-top: 9%;
 	width: 14%;
+	font-size: 1.1rem;
 	font-weight: bold;
-}
-
-nav li {
-	background: none repeat scroll 0% 0%
 }
 
 nav  li:nth-child(1) {
@@ -215,7 +213,7 @@ display:inherit;
    -moz-border-radius:0;
         border-radius:0;
 width: 100%;
-height: 2rem;
+height: 2.5rem;
 }
 
 ul[name="menu"] ul li:hover{
@@ -299,7 +297,6 @@ background-color : #219EFE;
 ul[name="menu"] li li:hover{
 background:#B6E4F2;
 }
-
 /** CONTENT HOME **/
 body {
 	background : url("../images/body.png") repeat scroll 0% 0% transparent;
@@ -310,7 +307,7 @@ body {
 /** CONTENT **/
 .content {
 width: 100%;
-height: 160%;
+height: 75rem;
 padding-top: 4%;
 margin: auto;
 font-family: 'Helvetica Neue';
@@ -319,15 +316,13 @@ font-family: 'Helvetica Neue';
 .content h1 {
 	text-align: center;
 	color: #F2A101;
-	font-size: 210%;
+	font-size: 2rem;
 	text-align : center;
 	margin-bottom: 1%;
-	margin-right: 0%;
-	
 }
 
 .content p {
-	font-size: 110%;
+	font-size: 1.1rem;
 	/**color: #90A0D7;**/
 	color: #A7A8A8;
 	text-align: center;
@@ -345,22 +340,15 @@ font-family: 'Helvetica Neue';
 .content h2 {
 	text-align: center;
 	color: #FEEA34;
-	font-size: 150%;
-	text-align: center;
+	font-size: 1.5rem;
 	padding-top: 1%;
 	background-color: #87CBFE;
 }
 
-div {
-	display: block;
-    margin-left: auto;
-    margin-right: auto
-}
-
 /** Projet **/ 
-#beginning li, #aftermatch li{
+section[name="beginning"] li, section[name="aftermatch"] li{
 	width: 15%;
-	height: 120px;
+	height: 7rem;
 	background-color: #F4F4F4;	
 	border: 2px solid #87CBFE;
 	border-radius: 3% 3% 3% 3%;
@@ -371,14 +359,14 @@ div {
 	margin-bottom: 2%;
 }
 
-#calendar {
+section[name="calendar"] {
 width : 100%;
-height: 40%;
+height: 29rem;
 }
 
-#calendar ol li{
+section[name="calendar"] ol li{
 	width: 15%;
-	height: 120px;
+	height: 8rem;
 	background-color: #F4F4F4;	
 	border: 2px solid #87CBFE;
 	border-radius: 3% 3% 3% 3%;
@@ -394,7 +382,7 @@ height: 40%;
     margin-left: auto;
     margin-right: auto;
 	width: 5%;
-	height: 10%;
+	height: 7rem;
 }
 
 /** Organisation calendrier **/
@@ -411,7 +399,7 @@ section  ol  li:nth-child(1),section  ol  li:nth-child(5),section  ol  li:nth-ch
 
 section  ol  li:nth-child(2),section  ol  li:nth-child(6),section  ol  li:nth-child(10) {
 	float: left;
-	left: 17%;
+	left: 15%;
 	margin-right: 2%;
 	
 }
@@ -425,7 +413,7 @@ section  ol  li:nth-child(3),section  ol  li:nth-child(7),section  ol  li:nth-ch
 
 section  ol  li:nth-child(4),section  ol  li:nth-child(8),section  ol  li:nth-child(12) {
 	float: right;
-	left: 2%;
+	left: 4%;
 	margin-left: 2%;
 }
 
@@ -450,4 +438,5 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
+	font-size: 100%;
 }
