--- a/fr v2/css/histoire.css
+++ b/fr v2/css/histoire.css
@@ -18,7 +18,7 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 20%;
+width: 17rem;
 height: 2rem;
 float: left;
 }
@@ -27,7 +27,8 @@ float: left;
 header div {
 float : right;
 width: 30%;
-height:4rem;
+height: 4rem;
+margin-top: -2.8%;
 }
 
 header > a img {
@@ -41,11 +42,10 @@ header blockquote h1:first-letter {
 
 header blockquote{    
     text-align: justify;
-	font-style: italic;
 	font-weight: normal;
-	font-size: 9px;
-	padding-top: 5%;
-	padding-right:5%;
+	font-size: 0.5rem;
+	padding-top: 3%;
+	padding-right: 3%;
 	color: #F2A101;
 }
 
@@ -53,12 +53,12 @@ header div[name]  h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 1rem;
+font-size: 0.8rem;
 color: #304D90;
 }
 
 header div[name]{
-width:90%;
+width:91%;
 top: 5%;
 float: left;
 }
@@ -66,9 +66,10 @@ float: left;
 /** Language **/
 header div aside {
 width: 9%;
+height: 100%;
 float: right;
-clear:both;
-margin-top:-12%;
+/**clear:both;**/
+margin-top:-2%;
 }
 
 /** FOOTER **/
@@ -146,7 +147,7 @@ padding: 0% 0% 10% 20%;
 
 /** NAV MENU **/
 nav {
-	width: 48%;
+	width: 46%;
 	height: 2.8rem;
 	font-family: 'BebasNeue';
 	text-transform: uppercase;
@@ -172,19 +173,16 @@ position:relative;
 width: 18%; 
 height: 2.8rem;
 border-radius: 9px 9px 9px 9px;
+background: none repeat scroll 0% 0%;
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
-	padding-top: 8%;
-    vertical-align: middle;
+	padding-top: 9%;
 	width: 14%;
+	font-size: 1.1rem;
 	font-weight: bold;
-}
-
-nav li {
-	background: none repeat scroll 0% 0%
 }
 
 nav  li:nth-child(1) {
@@ -215,7 +213,7 @@ display:inherit;
    -moz-border-radius:0;
         border-radius:0;
 width: 100%;
-height: 2rem;
+height: 2.5rem;
 }
 
 ul[name="menu"] ul li:hover{
@@ -308,49 +306,34 @@ body {
 
 
 /** CONTENT **/
-.content {
+section[name="history"] {
 width: 100%;
-height: 135%;
+height: 65rem;
 padding-top: 2%;
 margin: auto;
 font-family: 'Helvetica Neue';
 /**background : url("../images/ww2/history.png") transparent;**/
 }
 
-.content article {
-	height: 24%;
+section[name="history"] article {
 	width: 70%;
-	padding-left: 15%;
+	height: 15.6rem;
+	margin: auto;
+	display: block;
 }
 
-.content h1, #myModal h1 {
+article h1, #myModal h1 {
 	text-align: center;
 	padding-bottom: 1%;
 	color: #F2A101;
-	font-size: 250%;
+	font-size: 2.5rem;
 	margin-right: 0%;
 	text-transform: uppercase;
 	
 }
 
-.content h2 {
-	text-align: center;
-	color: #F2A101;
-	font-size: 150%;
-	margin-right: 0%;
-	margin-bottom: 0%;
-	margin-top: 3%;	
-}
-
-.content h3 {
-	color: #304D90;
-	text-align: center;
-	font-style: italic;
-	font-size: 85%;
-}
-
-.content p, #myModal p{
-	font-size: 120%;
+article p, #myModal p{
+	font-size: 1.2rem;
 	color: #90A0D7;
 	text-align: center;
 	margin-right: 0%;
@@ -361,43 +344,33 @@ font-family: 'Helvetica Neue';
 margin-top: 3%;
 }
 
-/**.content a {
-	color: #2252A5;
-	font-style: bold;
-	font-size: 120%;
-}**/
-
 /** Soulignement des liens **/
-.content a:hover {
+article a:hover {
 	text-decoration: none;
 	border-bottom: 1px dashed;
 }
 
-.content strong, #myModal strong {
+article strong, #myModal strong {
 	color: #F2A101;
 }
 
-.content ul li {
-	color: #90A0D7;
-	text-align:center;
-	margin-bottom: 1%;
-	list-style: none outside none;
-}
-#history {
+
+img[name="map"] {
 	position: relative;
 	width: 100%;
-	height: 76%;
+	height: 49.3rem;
 }
 
-
 /** Placement des images cliquables et comportement sur passage souris **/
-#sfiles {
+img[name="sfiles"] {
 	position: absolute;
 	margin-left: 44%;
 	margin-top: -35%;
+	width: 28%;
+	height: 20rem;
 }
 
-#boussole {
+img[name="boussole"] {
 	position: absolute;
 	margin-left: 10px;
 	margin-top: -12%;
@@ -406,9 +379,11 @@ margin-top: 3%;
        -o-transition: all 0.5s ease;
       -ms-transition: all 0.5s ease;
           transition: all 0.5s ease;
+	width: 11%;
+	height: 9rem;
 }
 
-#boussole:hover {
+img[name="boussole"]:hover {
 -webkit-transform: rotate(-5deg);
      -moz-transform: rotate(-5deg);
        -o-transform: rotate(-5deg);
@@ -426,8 +401,10 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
+	font-size: 100%;
 }
 
+/** Fenêtre popup **/
 .reveal-modal-bg { 
 		position: fixed; 
 		height: 100%;
