--- a/fr v2/css/missions.css
+++ b/fr v2/css/missions.css
@@ -18,7 +18,7 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 20%;
+width: 17rem;
 height: 2rem;
 float: left;
 }
@@ -27,7 +27,8 @@ float: left;
 header div {
 float : right;
 width: 30%;
-height:4rem;
+height: 4rem;
+margin-top: -2.8%;
 }
 
 header > a img {
@@ -41,11 +42,10 @@ header blockquote h1:first-letter {
 
 header blockquote{    
     text-align: justify;
-	font-style: italic;
 	font-weight: normal;
-	font-size: 9px;
-	padding-top: 5%;
-	padding-right:5%;
+	font-size: 0.5rem;
+	padding-top: 3%;
+	padding-right: 3%;
 	color: #F2A101;
 }
 
@@ -53,12 +53,12 @@ header div[name]  h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 1rem;
+font-size: 0.8rem;
 color: #304D90;
 }
 
 header div[name]{
-width:90%;
+width:91%;
 top: 5%;
 float: left;
 }
@@ -66,9 +66,10 @@ float: left;
 /** Language **/
 header div aside {
 width: 9%;
+height: 100%;
 float: right;
-clear:both;
-margin-top:-12%;
+/**clear:both;**/
+margin-top:-2%;
 }
 
 /** FOOTER **/
@@ -146,7 +147,7 @@ padding: 0% 0% 10% 20%;
 
 /** NAV MENU **/
 nav {
-	width: 48%;
+	width: 46%;
 	height: 2.8rem;
 	font-family: 'BebasNeue';
 	text-transform: uppercase;
@@ -172,19 +173,16 @@ position:relative;
 width: 18%; 
 height: 2.8rem;
 border-radius: 9px 9px 9px 9px;
+background: none repeat scroll 0% 0%;
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
-	padding-top: 8%;
-    vertical-align: middle;
+	padding-top: 9%;
 	width: 14%;
+	font-size: 1.1rem;
 	font-weight: bold;
-}
-
-nav li {
-	background: none repeat scroll 0% 0%
 }
 
 nav  li:nth-child(1) {
@@ -215,7 +213,7 @@ display:inherit;
    -moz-border-radius:0;
         border-radius:0;
 width: 100%;
-height: 2rem;
+height: 2.5rem;
 }
 
 ul[name="menu"] ul li:hover{
@@ -311,48 +309,52 @@ body {
 /** CONTENT **/
 .content {
 width: 100%;
-height: 105%;
+height: 52rem;
 padding-top: 4%;
 margin: auto;
 font-family: 'Helvetica Neue';
 }
 
-.content h1 {
+section[name="pro"], section[name="personal"]{
+	padding-bottom: 4%;
+	width: 100%;
+	height: 20rem;
+}
+
+section[name="pro"] h1, section[name="personal"] h1 {
 	text-align: center;
 	color: #F2A101;
-	font-size: 210%;
-	text-align : center;
+	font-size: 2rem;
 	margin-bottom: 1%;
 	margin-right: 0%;
 	
 }
 
-.content p {
+section[name="pro"] p, section[name="personal"] p {
 	padding-top: 3%;
-	font-size: 110%;
+	font-size: 1.1rem;
 	/**color: #90A0D7;**/
 	color: #A7A8A8;
 	text-align: center;
-	margin-right: 2%;
 }
 
-.content a {
+section[name="pro"] a, section[name="personal"] a {
 	color: #2252A5;
 }
 
-.content h2 {
+section[name] h2 {
 	text-align: center;
 	color: #FEEA34;
-	font-size: 150%;
+	font-size: 1.5rem;
 	text-align: center;
 	padding-top: 1%;
 	background-color: #87CBFE;
 }
 
 /** Projet **/ 
-.content article{
+article{
 	width: 43%;
-	height: 275px;
+	height: 19rem;
 	background-color: #F4F4F4;	
 	border: 2px solid #87CBFE;
 	border-radius: 1% 1% 1% 1%;
@@ -362,9 +364,11 @@ font-family: 'Helvetica Neue';
 	left: 28%;
 }
 
-.content section ul li {
+section[name="pro"] ul li {
 	text-align: center;
-	padding-top: 2%;
+	padding-top: 1%;
+	color: #A7A8A8;
+	font-weight:bold;
 }
 
 .content img {
@@ -394,4 +398,5 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
+	font-size: 100%;
 }
