--- a/fr v2/css/mlégales.css
+++ b/fr v2/css/mlégales.css
@@ -297,77 +297,72 @@ background-color : #219EFE;
 ul[name="menu"] li li:hover{
 background:#B6E4F2;
 }
-/** CONTENT HOME **/
+
+/** CONTENT **/
 body {
 	background : url("../images/body.png") repeat scroll 0% 0% transparent;
 	margin: 0 auto;
 }
 
-
-/** CONTENT **/
-.content {
+aside[name="mlegales"] {
 width: 100%;
-height: 190%;
+height: 44rem;
+padding-top: 4%;
 margin: auto;
-font-family: 'Helvetica Neue';
 }
 
-.content article{
-width: 100%;
-padding-top: 2%;
-}
-
-.content section {
-width: 100%;
-height: 83%;
-margin-top: 4%;
-}
-
-.content h1, #myModal h1 {
+aside[name="mlegales"] h1 {
+	font-family: 'Helvetica Neue';
 	text-align: center;
 	color: #F2A101;
-	font-size: 250%;
-	text-align : center;
-	margin-right: 0%;
+	font-size: 2rem;
+	margin-bottom: 1%;
+	margin-right: 1%;	
 	text-transform: uppercase;
-	
 }
 
-.content h2 {
-	color: #304D90;
-	text-align: center;
-	font-style: italic;
-	font-size: 85%;
-	padding-bottom: 3%;
+aside[name="mlegales"] img {
+	padding-top:2%;
+	padding-bottom:1%;
+	display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 
-.content p, #myModal p {
+aside[name="mlegales"] p {
 	padding-top: 1%;
-	font-size: 120%;
+	font-family: 'Helvetica Neue';
+	font-size: 1.2rem;
 	color: #90A0D7;
 	text-align: center;
 	margin-right: 0%;
 }
 
-#myModal p {
-margin-top: 3%;
+aside[name="mlegales"] a {
+	color: #2252A5;
 }
 
 /** Soulignement des liens **/
-.content a:hover {
+aside[name="mlegales"] a:hover {
 	text-decoration: none;
 	border-bottom: 1px dashed;
 }
 
-.content strong, #myModal strong {
+aside[name="mlegales"] strong {
 	color: #F2A101;
 }
 
-.content ul li {
-	color: #90A0D7;
-	text-align:center;
-	margin-bottom: 1%;
-	list-style: none outside none;
+/** Couleur balise strong pour les principes de ma vie **/
+#bleu {
+	color: #2252A5;
+}
+
+#orange {
+	color: #F2A101;
+}
+
+#jaune {
+	color: #FEE22A;
 }
 
 /** DIVERS **/ 
@@ -379,51 +374,5 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
-}
-
-.reveal-modal-bg { 
-		position: fixed; 
-		height: 100%;
-		width: 100%;
-		background: #000;
-		background: rgba(0,0,0,.8);
-		z-index: 100;
-		display: none;
-		top: 0;
-		left: 0; 
-}
-	
-.reveal-modal {
-		visibility: hidden;
-		top: 100px; 
-		left: 50%;
-		margin-left: -300px;
-		width: 600px;
-		background: #eee url(modal-gloss.png) no-repeat -200px -80px;
-		position: absolute;
-		z-index: 101;
-		padding: 30px 40px 34px;
-		-moz-border-radius: 5px;
-		-webkit-border-radius: 5px;
-		border-radius: 5px;
-		-moz-box-shadow: 0 0 10px rgba(0,0,0,.4);
-		-webkit-box-shadow: 0 0 10px rgba(0,0,0,.4);
-		-box-shadow: 0 0 10px rgba(0,0,0,.4);
-}
-		
-.reveal-modal.small 		{ width: 200px; margin-left: -140px;}
-.reveal-modal.medium 		{ width: 400px; margin-left: -240px;}
-.reveal-modal.large 		{ width: 600px; margin-left: -340px;}
-.reveal-modal.xlarge 		{ width: 800px; margin-left: -440px;}
-	
-.reveal-modal .close-reveal-modal {
-		font-size: 22px;
-		line-height: .5;
-		position: absolute;
-		top: 8px;
-		right: 11px;
-		color: #aaa;
-		text-shadow: 0 -1px 1px rbga(0,0,0,.6);
-		font-weight: bold;
-		cursor: pointer;
+	font-size: 100%;
 }
